manual-kubernetes-on-arm/cluster-setup/modules/vpc/routes.tf
resource "aws_default_route_table" "default" {
  default_route_table_id = aws_vpc.this.default_route_table_id

  route = []

  timeouts {
    create = "5m"
    update = "5m"
  }

  tags = {
    Name = "${var.name}-default"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.this.id
  }

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }

  tags = {
    Name = "${var.name}-public"
  }
}

resource "aws_route_table_association" "public" {
  for_each       = local.subnet_availability_zones
  subnet_id      = aws_subnet.public[each.key].id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.this.id
  }

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.this.id
  }

  route {
    ipv6_cidr_block = "64:ff9b::/96"
    nat_gateway_id  = aws_nat_gateway.this.id
  }

  tags = {
    Name = "${var.name}-private"
  }
}

resource "aws_route_table_association" "private" {
  for_each       = local.subnet_availability_zones
  subnet_id      = aws_subnet.private[each.key].id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "kubernetes_service" {
  for_each       = local.subnet_availability_zones
  subnet_id      = aws_subnet.kubernetes_service[each.key].id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "kubernetes_pod" {
  for_each       = local.subnet_availability_zones
  subnet_id      = aws_subnet.kubernetes_pod[each.key].id
  route_table_id = aws_route_table.private.id
}
